<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".MainActivity">
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:visibility="gone"
        android:theme="@style/progressBlue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTomorrow" />

    <TextView
        android:id="@+id/tvSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColor="@color/retweet"
        android:textSize="25sp"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnToday"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardSearch"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardElevation="15dp"
        app:cardCornerRadius="25dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edtSearch"
            android:layout_gravity="center_vertical"
            android:padding="12dp"
            android:hint="@string/aquarius_leo_cancer"
            android:inputType="text"
            android:imeOptions="actionSearch"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_marginStart="10dp"
            android:background="@drawable/rounded_editext"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="12dp"
            android:foregroundGravity="center_horizontal"
            android:id="@+id/icSearch"
            android:src="@drawable/ic_search"
            app:layout_constraintEnd_toEndOf="@+id/cardSearch"/>



    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvMood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="134dp"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardSearch" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="126dp"
        android:text="@string/born"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tvSign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardSearch"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnToday"
        android:background="@drawable/custom_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/today"
        android:backgroundTint="@color/dark_brown"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/btnTomorrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnTomorrow" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTomorrow"
        android:background="@drawable/custom_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="190dp"
        android:layout_marginStart="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="8dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:backgroundTint="@color/dark_brown"
        android:text="@string/tomorrow"
        app:layout_constraintBottom_toTopOf="@+id/tvDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnToday" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/best_match"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvBestMatch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvBestMatch" />

    <TextView
        android:id="@+id/tvBestMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@id/textView"
        android:layout_marginStart="4dp"
        android:textColor="@color/like"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        tools:layout_editor_absoluteX="99dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lucky_number"
        android:layout_marginEnd="2dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/tvBestMatch"
        android:layout_marginStart="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvLuckyNumber"
        app:layout_constraintTop_toTopOf="@+id/tvLuckyNumber"
        tools:layout_editor_absoluteX="199dp" />

    <TextView
        android:id="@+id/tvLuckyNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="223dp"
        android:layout_marginStart="4dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/tvSign" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/lucky_time"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvLuckyTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvLuckyTime" />

    <TextView
        android:id="@+id/tvLuckyTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tvRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/cardSearch"
        android:layout_marginTop="126dp"
        android:layout_marginStart="4dp"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="213dp" />


</androidx.constraintlayout.widget.ConstraintLayout>